@@ -1,33 +1,34 @@
-##################################################
+#!/usr/bin/make
+
+# ------------------------------------------------------------------------
 # Author     : Weilun Fong | wlf@zhishan-iot.tk
-# Date       : 2020-01-06
+# Date       : 2020-02-14
 # Description: version Makefile
 # E-mail     : mcu@zhishan-iot.tk
 # Make-tool  : GNU Make (http://www.gnu.org/software/make/manual/make.html)
-# Page       :
-# Tar-mcu    :
-# Tar-project: general purpose
-# Version    : v0.2.6
-##################################################
+# Page       : https://hw.zhishan-iot.tk/page/hml/detail/fwlib_stc10.html
+# Project    : HML_FwLib_STC10
+# Version    : v0.3.1
+# ------------------------------------------------------------------------
 
-########################################
-##### [*]VARIABLE DEFINE
-########################################
-##### shell command
-ECHO               := echo
-##### version information##
+# Check run environment
+ifneq ($(MAKELEVEL), 1)
+    $(error It's not allowed to execute this makefile directly!)
+endif
+
+# Items about version
+# HML
 HML_FWLIB_NAME     := HML_FwLib_STC10
-# [note]: we unify version code from v0.1.0 because of the same makefile template
-MAK_VERSION        := v0.2.6
+# HmlFwlibMakefile
+# [note] we unify version code from v0.1.0 because of the same makefile template
+MAK_VERSION        := v0.3.1
 # author
 AUTHOR_NAME        := Weilun Fong
 AUTHOR_EMAIL       := wlf@zhishan-iot.tk
 # maintainer
 MAINTAINER_EMAIL   := mcu@zhishan-iot.tk
 
-########################################
-##### [1]PRINT VERSION
-########################################
+# Print version information
 version:
 	@$(ECHO) "HmlFwlibMakefile [$(MAK_VERSION)]"
 	@$(ECHO) "General purpose Makefile for HML firmware library."
@@ -35,4 +36,4 @@ version:
 	@$(ECHO) ""
 	@$(ECHO) "Adapted for $(HML_FWLIB_NAME) $(HML_FWLIB_VERSION)\
 by $(AUTHOR_NAME) <$(AUTHOR_EMAIL)>"
-	@$(ECHO) "Report bugs to <$(MAINTAINER_EMAIL)>"
+	@$(ECHO) "Report bugs and patches to <$(MAINTAINER_EMAIL)>"
