@@ -56,6 +56,9 @@
  Alias   : v0.2.1
  Date    :
  Note    : (1)update Makefile to v0.2.6
+              update Makefile to v0.3.1
+              - optimize Makefile structure and print format
+              - support MCU, CLKFRE, CODE, XRAM, CONF, VERBOSE variable
            (2)refactor hml/version.h
            (3)optimize compile select
            (4)add function UART_getByte and UART_sendHex
